SproutCore apps used to receive an `overflow: hidden` style on the body element by default unless otherwise configured in the Buildfile.  That is no longer the case, but since drag and drop doesn't work properly for "regular" SproutCore apps without recognizing that body also needs to prevent overflow, we shall include it as a default style that can always be overridden.

--- a/themes/ace/resources/body.css
+++ b/themes/ace/resources/body.css
@@ -1,3 +1,7 @@
+body {
+  overflow: hidden;
+}
+
 .sc-main {
   background: #ccc;
 }
